docmost/psql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: docmost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: docmost-psql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: docmost
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
